--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 	
 
 <body onload="myFunction()">
-	
-<h1 id="demo" onmouseover="mouseOver()" onmouseout="mouseOut()">Welcome (Mouse over me) </h1><br><br><br>
+
+<h1 id="demo" onmouseover="mouseOver()" onmouseout="mouseOut()">Welcome (Mouse over me)</h1>
 	
 	<button onclick="displayDate()">Press me!</button>
 		<p id="onclick"></p><br><br>
